--- a/style.css
+++ b/style.css
@@ -316,36 +316,120 @@
       oklch(0.2251 0.0091 208.75),
       oklch(0.9126 0.0061 223.46)
     );
-    --md-sys-color-surface: rgb(245 250 251);
-    --md-sys-color-on-surface: rgb(12 18 19);
-    --md-sys-color-surface-variant: rgb(219 228 230);
-    --md-sys-color-on-surface-variant: rgb(47 56 57);
-    --md-sys-color-outline: rgb(75 84 86);
-    --md-sys-color-outline-variant: rgb(101 111 112);
-    --md-sys-color-shadow: rgb(0 0 0);
-    --md-sys-color-scrim: rgb(0 0 0);
-    --md-sys-color-inverse-surface: rgb(43 49 51);
-    --md-sys-color-inverse-on-surface: rgb(236 242 243);
-    --md-sys-color-inverse-primary: rgb(130 211 224);
-    --md-sys-color-primary-fixed: rgb(24 120 132);
-    --md-sys-color-on-primary-fixed: rgb(255 255 255);
-    --md-sys-color-primary-fixed-dim: rgb(0 94 104);
-    --md-sys-color-on-primary-fixed-variant: rgb(255 255 255);
-    --md-sys-color-secondary-fixed: rgb(89 113 118);
-    --md-sys-color-on-secondary-fixed: rgb(255 255 255);
-    --md-sys-color-secondary-fixed-dim: rgb(65 89 93);
-    --md-sys-color-on-secondary-fixed-variant: rgb(255 255 255);
-    --md-sys-color-tertiary-fixed: rgb(97 108 141);
-    --md-sys-color-on-tertiary-fixed: rgb(255 255 255);
-    --md-sys-color-tertiary-fixed-dim: rgb(73 84 115);
-    --md-sys-color-on-tertiary-fixed-variant: rgb(255 255 255);
-    --md-sys-color-surface-dim: rgb(194 199 201);
-    --md-sys-color-surface-bright: rgb(245 250 251);
-    --md-sys-color-surface-container-lowest: rgb(255 255 255);
-    --md-sys-color-surface-container-low: rgb(239 245 246);
-    --md-sys-color-surface-container: rgb(227 233 234);
-    --md-sys-color-surface-container-high: rgb(216 222 223);
-    --md-sys-color-surface-container-highest: rgb(205 211 212);
+    --md-sys-color-surface: light-dark(
+      oklch(0.9816 0.0055 211.04),
+      oklch(0.1854 0.0094 208.77)
+    );
+    --md-sys-color-on-surface: light-dark(
+      oklch(0.1764 0.0095 208.78),
+      oklch(1 0 0)
+    );
+    --md-sys-color-surface-variant: light-dark(
+      oklch(0.9126 0.0101 212.52),
+      oklch(0.3943 0.0122 212.58)
+    );
+    --md-sys-color-on-surface-variant: light-dark(
+      oklch(0.3327 0.0123 204.76),
+      oklch(0.8936 0.0112 211.04)
+    );
+    --md-sys-color-outline: light-dark(
+      oklch(0.4386 0.0119 212.57),
+      oklch(0.7624 0.0113 204.1)
+    );
+    --md-sys-color-outline-variant: light-dark(
+      oklch(0.5336 0.0123 204.04),
+      oklch(0.6524 0.012 211.04)
+    );
+    --md-sys-color-shadow: oklch(0 0 0);
+    --md-sys-color-scrim: oklch(0 0 0);
+    --md-sys-color-inverse-surface: light-dark(
+      oklch(0.3082 0.0091 219.77),
+      oklch(0.9126 0.0061 223.46)
+    );
+    --md-sys-color-inverse-on-surface: light-dark(
+      oklch(0.9569 0.0065 208.78),
+      oklch(0.2836 0.0087 208.74)
+    );
+    --md-sys-color-inverse-primary: light-dark(
+      oklch(0.8195 0.0812 208.7),
+      oklch(0.3944 0.067764 207.8042)
+    );
+    --md-sys-color-primary-fixed: light-dark(
+      oklch(0.5263 0.0843 207.89),
+      oklch(0.9048 0.0811 209.52)
+    );
+    --md-sys-color-on-primary-fixed: light-dark(
+      oklch(1 0 0),
+      oklch(0.1748 0.03 206.8)
+    );
+    --md-sys-color-primary-fixed-dim: light-dark(
+      oklch(0.4406 0.0756 207.39),
+      oklch(0.8195 0.0812 208.7)
+    );
+    --md-sys-color-on-primary-fixed-variant: light-dark(
+      oklch(1 0 0),
+      oklch(0.3262 0.0563 209.43)
+    );
+    --md-sys-color-secondary-fixed: light-dark(
+      oklch(0.5313 0.0293 211.76),
+      oklch(0.9104 0.0283 210.53)
+    );
+    --md-sys-color-on-secondary-fixed: light-dark(
+      oklch(1 0 0),
+      oklch(0.1748 0.03 206.8)
+    );
+    --md-sys-color-secondary-fixed-dim: light-dark(
+      oklch(0.4461 0.0297 208.84),
+      oklch(0.8243 0.0289 210.54)
+    );
+    --md-sys-color-on-secondary-fixed-variant: light-dark(
+      oklch(1 0 0),
+      oklch(0.3305 0.0307 209.09)
+    );
+    --md-sys-color-tertiary-fixed: light-dark(
+      oklch(0.5349 0.0537 270.21),
+      oklch(0.9157 0.0405 273.35)
+    );
+    --md-sys-color-on-tertiary-fixed: light-dark(
+      oklch(1 0 0),
+      oklch(0.1811 0.0605 261.1)
+    );
+    --md-sys-color-tertiary-fixed-dim: light-dark(
+      oklch(0.4494 0.0529 269.13),
+      oklch(0.8292 0.0523 270.72)
+    );
+    --md-sys-color-on-tertiary-fixed-variant: light-dark(
+      oklch(1 0 0),
+      oklch(0.3337 0.0553 268.01)
+    );
+    --md-sys-color-surface-dim: light-dark(
+      oklch(0.8263 0.0062 223.47),
+      oklch(0.1854 0.0094 208.77)
+    );
+    --md-sys-color-surface-bright: light-dark(
+      oklch(0.9816 0.0055 211.04),
+      oklch(0.3881 0.0094 207.08)
+    );
+    --md-sys-color-surface-container-lowest: light-dark(
+      oklch(1 0 0),
+      oklch(0.129 0.0093 211.36)
+    );
+    --md-sys-color-surface-container-low: light-dark(
+      oklch(0.9659 0.0065 208.78),
+      oklch(0.2336 0.009 208.75)
+    );
+    --md-sys-color-surface-container: light-dark(
+      oklch(0.9297 0.0066 208.78),
+      oklch(0.2754 0.0087 208.74)
+    );
+    --md-sys-color-surface-container-high: light-dark(
+      oklch(0.8941 0.0067 208.78),
+      oklch(0.3188 0.0098 207.06)
+    );
+    --md-sys-color-surface-container-highest: light-dark(
+      oklch(0.8625 0.0067 208.78),
+      oklch(0.3624 0.0082 208.75)
+    );
   }
 }
 h1 {
