--- a/style.css
+++ b/style.css
@@ -8,238 +8,229 @@
     var(--base-L) calc(var(--base-C) * var(--C-scale)) var(--base-H)
   );
   color-scheme: light dark;
-  --md-sys-color-primary: light-dark(
-    oklch(47.3% 0.082 208.6),
-    oklch(81.9% 0.081 208.7)
-  );
+  --md-sys-color-primary: light-dark(oklch(50% 0.08 210), oklch(80% 0.08 210));
   --md-sys-color-surface-tint: light-dark(
-    oklch(47.3% 0.082 208.6),
-    oklch(81.9% 0.081 208.7)
+    oklch(50% 0.08 210),
+    oklch(80% 0.08 210)
   );
   --md-sys-color-on-primary: light-dark(
-    oklch(100% 0 208.6),
-    oklch(30.5% 0.052 208.8)
+    oklch(100% 0.05 210),
+    oklch(30% 0.05 210)
   );
   --md-sys-color-primary-container: light-dark(
-    oklch(81.9% 0.081 208.7),
-    oklch(47.3% 0.082 208.6)
+    oklch(80% 0.08 210),
+    oklch(50% 0.08 210)
   );
   --md-sys-color-on-primary-container: light-dark(
-    oklch(39.1% 0.067 207.9),
-    oklch(90.5% 0.081 209.5)
+    oklch(40% 0.08 210),
+    oklch(90% 0.08 210)
   );
   --md-sys-color-secondary: light-dark(
-    oklch(47.9% 0.03 211.8),
-    oklch(82.4% 0.029 210.5)
+    oklch(50% 0.05 210),
+    oklch(80% 0.05 210)
   );
   --md-sys-color-on-secondary: light-dark(
-    oklch(100% 0 208.6),
-    oklch(30.5% 0.052 208.8)
+    oklch(100% 0.05 210),
+    oklch(30% 0.05 210)
   );
   --md-sys-color-secondary-container: light-dark(
-    oklch(91% 0.028 210.5),
-    oklch(39.5% 0.03 208.9)
+    oklch(90% 0.03 210),
+    oklch(40% 0.03 210)
   );
   --md-sys-color-on-secondary-container: light-dark(
-    oklch(39.5% 0.03 208.9),
-    oklch(91% 0.028 210.5)
+    oklch(40% 0.03 210),
+    oklch(90% 0.03 210)
   );
-  --md-sys-color-tertiary: light-dark(
-    oklch(48.4% 0.052 268),
-    oklch(82.9% 0.052 270.7)
-  );
+  --md-sys-color-tertiary: light-dark(oklch(50% 0.05 270), oklch(80% 0.05 270));
   --md-sys-color-on-tertiary: light-dark(
-    oklch(100% 0 268),
-    oklch(31.3% 0.055 266.2)
+    oklch(100% 0.05 270),
+    oklch(30% 0.05 270)
   );
   --md-sys-color-tertiary-container: light-dark(
-    oklch(91.6% 0.04 273.3),
-    oklch(39.8% 0.053 268.5)
+    oklch(90% 0.03 270),
+    oklch(40% 0.03 270)
   );
   --md-sys-color-on-tertiary-container: light-dark(
-    oklch(39.8% 0.053 268.5),
-    oklch(91.6% 0.04 273.3)
+    oklch(40% 0.05 270),
+    oklch(90% 0.05 270)
   );
-  --md-sys-color-error: light-dark(
-    oklch(50.6% 0.193 27.7),
-    oklch(83.8% 0.089 26.8)
-  );
-  --md-sys-on-error: light-dark(oklch(100% 0 89.9), oklch(32.8% 0.134 27.3));
+  --md-sys-color-error: light-dark(oklch(50% 0.2 27.5), oklch(80% 0.05 27.5));
+  --md-sys-on-error: light-dark(oklch(100% 0 27.5), oklch(30% 0.13 27.5));
   --md-sys-error-container: light-dark(
-    oklch(91.8% 0.042 25.2),
-    oklch(41.7% 0.17 27.4)
+    oklch(90% 0.05 27.5),
+    oklch(40% 0.2 27.5)
   );
   --md-sys-on-error-container: light-dark(
-    oklch(41.7% 0.17 27.4),
-    oklch(91.8% 0.042 25.2)
+    oklch(40% 0.2 27.5),
+    oklch(90% 0.05 27.5)
   );
   --md-sys-color-background: light-dark(
-    oklch(98.2% 0.005 211),
-    oklch(18.5% 0.009 208.8)
+    oklch(100% 0.005 210),
+    oklch(20% 0.01 210)
   );
 }
 
 @media (prefers-contrast: more) {
   :root {
     --md-sys-color-primary: light-dark(
-      oklch(0.29 0.0498 207.54),
-      oklch(0.9491 0.0444 210.46)
+      oklch(0.3 0.05 210),
+      oklch(0.95 0.04 210)
     );
     --md-sys-color-surface-tint: light-dark(
-      oklch(0.4734 0.0815 208.59),
-      oklch(0.8195 0.0812 208.7)
+      oklch(0.5 0.08 210),
+      oklch(0.8 0.08 210)
     );
-    --md-sys-color-on-primary: light-dark(oklch(1 0 0), oklch(0 0 0));
+    --md-sys-color-on-primary: light-dark(oklch(1), oklch(0));
     --md-sys-color-primary-container: light-dark(
-      oklch(0.3977 0.0683 207.67),
-      oklch(0.8072 0.0813 208.72)
+      oklch(0.4 0.075 210),
+      oklch(0.8 0.075 210)
     );
     --md-sys-color-on-primary-container: light-dark(
-      oklch(oklch(1 0 0)),
-      oklch(0.1494 0.0255 204.55)
+      oklch(oklch(1 0.03 210)),
+      oklch(0.15 0.03 210)
     );
     --md-sys-color-secondary: light-dark(
-      oklch(0.2909 0.0318 208.83),
-      oklch(0.9521 0.029 210.04)
+      oklch(0.3 0.03 210),
+      oklch(0.95 0.03 210)
     );
     --md-sys-color-on-secondary: light-dark(oklch(1 0 0), oklch(0 0 0));
     --md-sys-color-secondary-container: light-dark(
-      oklch(0.4022 0.0301 208.9),
-      oklch(0.8118 0.029 210.54)
+      oklch(0.4 0.03 210),
+      oklch(0.8 0.03 210)
     );
     --md-sys-color-on-secondary-container: light-dark(
       oklch(1 0 0),
-      oklch(0.1494 0.0255 204.55)
+      oklch(0.15 0.03 210)
     );
     --md-sys-color-tertiary: light-dark(
-      oklch(0.2942 0.0552 267.24),
-      oklch(0.9553 0.0215 280.29)
+      oklch(0.3 0.03 270),
+      oklch(0.95 0.03 270)
     );
     --md-sys-color-on-tertiary: light-dark(oklch(1 0 0), oklch(0 0 0));
     --md-sys-color-tertiary-container: light-dark(
-      oklch(0.4057 0.0543 268.91),
-      oklch(0.8167 0.0525 270.7)
+      oklch(0.4 0.05 270),
+      oklch(0.8 0.05 270)
     );
     --md-sys-color-on-tertiary-container: light-dark(
-      oklch(1 0 0),
-      oklch(0.1516 0.0621 260.07)
+      oklch(1 0 270),
+      oklch(0.15 0.06 270)
     );
     --md-sys-color-error: light-dark(
-      oklch(0.3075 0.125465 27.3829),
-      oklch(0.9574 0.0211 28.33)
+      oklch(0.3 0.125 27.5),
+      oklch(0.95 0.02 27.5)
     );
     --md-sys-color-on-error: light-dark(oklch(1 0 0), oklch(0 0 0));
     --md-sys-color-error-container: light-dark(
-      oklch(0.4273 0.1744 27.51),
-      oklch(0.8262 0.0969 27.13)
+      oklch(0.4 0.175 27.5),
+      oklch(0.8 0.01 27.5)
     );
     --md-sys-color-on-error-container: light-dark(
-      oklch(1 0 0),
-      oklch(0.1586 0.0645 25.91)
+      oklch(1 0 27.5),
+      oklch(0.15 0.06 27.5)
     );
     --md-sys-color-background: light-dark(
-      oklch(0.982 0.0055 211),
-      oklch(0.185 0.009 208.8)
+      oklch(0.98 0.006 210),
+      oklch(0.185 0.009 210)
     );
     --md-sys-color-on-background: light-dark(
-      oklch(0.2251 0.0091 208.75),
-      oklch(0.9126 0.0061 223.46)
+      oklch(0.225 0.009 210),
+      oklch(0.91 0.006 210)
     );
     --md-sys-color-surface: light-dark(
-      oklch(0.982 0.0055 211),
-      oklch(0.185 0.009 208.8)
+      oklch(0.9 0.006 210),
+      oklch(0.3 0.009 210)
     );
     --md-sys-color-on-surface: light-dark(oklch(0 0 0), oklch(1 0 0));
     --md-sys-color-surface-variant: light-dark(
-      oklch(0.9126 0.0101 212.52),
-      oklch(0.3943 0.0122 212.58)
+      oklch(0.9 0.01 210),
+      oklch(0.4 0.01 210)
     );
     --md-sys-color-on-surface-variant: light-dark(oklch(0 0 0), oklch(1 0 0));
     --md-sys-color-outline: light-dark(
-      oklch(0.2931 0.0126 204.74),
-      oklch(0.9539 0.0107 204.12)
+      oklch(0.3 0.01 210),
+      oklch(0.95 0.01 210)
     );
     --md-sys-color-outline-variant: light-dark(
-      oklch(0.4043 0.013 203.98),
-      oklch(0.8139 0.0103 212.53)
+      oklch(0.4 0.01 210),
+      oklch(0.8 0.01 210)
     );
     --md-sys-color-shadow: oklch(0 0 0);
     --md-sys-color-scrim: oklch(0 0 0);
     --md-sys-color-inverse-surface: light-dark(
-      oklch(0.3082 0.0091 219.77),
-      oklch(0.9126 0.0061 223.46)
+      oklch(0.3 0.009 210),
+      oklch(0.9 0.006 210)
     );
     --md-sys-color-inverse-on-surface: light-dark(oklch(1 0 0), oklch(0 0 0));
     --md-sys-color-inverse-primary: light-dark(
-      oklch(0.8195 0.0812 208.7),
-      oklch(0.3944 0.067764 207.8042)
+      oklch(0.8 0.075 210),
+      oklch(0.4 0.075 210)
     );
     --md-sys-color-primary-fixed: light-dark(
-      oklch(0.3977 0.0683 207.67),
-      oklch(0.9048 0.0811 209.52)
+      oklch(0.4 0.075 210),
+      oklch(0.9 0.075 210)
     );
     --md-sys-color-on-primary-fixed: light-dark(oklch(1 0 0), oklch(0 0 0));
     --md-sys-color-primary-fixed-dim: light-dark(
-      oklch(0.3147 0.053882 206.309),
-      oklch(0.8195 0.0812 208.7)
+      oklch(0.3 0.075 210),
+      oklch(0.8 0.075 210)
     );
     --md-sys-color-on-primary-fixed-variant: light-dark(
       oklch(1 0 0),
-      oklch(0.1748 0.03 206.8)
+      oklch(0.2 0.03 210)
     );
     --md-sys-color-secondary-fixed: light-dark(
-      oklch(0.4022 0.0301 208.9),
-      oklch(0.9104 0.0283 210.53)
+      oklch(0.4 0.03 210),
+      oklch(0.9 0.03 210)
     );
     --md-sys-color-on-secondary-fixed: light-dark(oklch(1 0 0), oklch(0 0 0));
     --md-sys-color-secondary-fixed-dim: light-dark(
-      oklch(0.315 0.0307 209.16),
-      oklch(0.8243 0.0289 210.54)
+      oklch(0.3 0.03 210),
+      oklch(0.8 0.03 210)
     );
     --md-sys-color-on-secondary-fixed-variant: light-dark(
       oklch(1 0 0),
-      oklch(0.1748 0.03 206.8)
+      oklch(0.2 0.03 210)
     );
     --md-sys-color-tertiary-fixed: light-dark(
-      oklch(0.4057 0.0543 268.91),
-      oklch(0.9157 0.0405 273.35)
+      oklch(0.4 0.03 270),
+      oklch(0.9 0.03 270)
     );
     --md-sys-color-on-tertiary-fixed: light-dark(oklch(1 0 0), oklch(0 0 0));
     --md-sys-color-tertiary-fixed-dim: light-dark(
-      oklch(0.3208 0.0545 266.28),
-      oklch(0.8292 0.0523 270.72)
+      oklch(0.3 0.05 270),
+      oklch(0.8 0.05 270)
     );
     --md-sys-color-on-tertiary-fixed-variant: light-dark(
       oklch(1 0 0),
-      oklch(0.1811 0.0605 261.1)
+      oklch(0.2 0.06 270)
     );
     --md-sys-color-surface-dim: light-dark(
-      oklch(0.7845 0.0069 208.78),
-      oklch(0.1854 0.0094 208.77)
+      oklch(0.8 0.01 210),
+      oklch(0.2 0.01 210)
     );
     --md-sys-color-surface-bright: light-dark(
-      oklch(0.9816 0.0055 211.04),
-      oklch(0.4299 0.0079 208.76)
+      oklch(0.98 0.01 210),
+      oklch(0.42 0.01 210)
     );
     --md-sys-color-surface-container-lowest: light-dark(
       oklch(1 0 0),
       oklch(0 0 0)
     );
     --md-sys-color-surface-container-low: light-dark(
-      oklch(0.9569 0.0065 208.78),
-      oklch(0.2421 0.009 208.75)
+      oklch(0.95 0.0065 210),
+      oklch(0.25 0.009 210)
     );
     --md-sys-color-surface-container: light-dark(
-      oklch(0.9126 0.0061 223.46),
-      oklch(0.3082 0.0091 219.77)
+      oklch(0.91 0.006 210),
+      oklch(0.31 0.009 210)
     );
     --md-sys-color-surface-container-high: light-dark(
-      oklch(0.8687 0.0067 208.78),
-      oklch(0.3513 0.0088 219.72)
+      oklch(0.85 0.007 210),
+      oklch(0.35 0.009 210)
     );
     --md-sys-color-surface-container-highest: light-dark(
-      oklch(0.8263 0.0062 223.47),
-      oklch(0.3965 0.0081 208.75)
+      oklch(0.83 0.0062 223.47),
+      oklch(0.4 0.0081 208.75)
     );
   }
 }
@@ -247,188 +238,176 @@
 @media (prefers-contrast: less) {
   :root {
     --md-sys-color-primary: light-dark(
-      oklch(0.3262 0.0563 209.43),
-      oklch(0.8867 0.0812 209.55)
+      oklch(0.3 0.07 210),
+      oklch(0.9 0.07 210)
     );
     --md-sys-color-surface-tint: light-dark(
-      oklch(0.4734 0.0815 208.59),
-      oklch(0.8195 0.0812 208.7)
+      oklch(0.4 0.075 210),
+      oklch(0.8 0.075 210)
     );
-    --md-sys-color-on-primary: light-dark(
-      oklch(1 0 0),
-      oklch(0.261 0.045 209.3)
-    );
+    --md-sys-color-on-primary: light-dark(oklch(1 0 0), oklch(0.26 0.05 210));
     --md-sys-color-primary-container: light-dark(
-      oklch(0.5263 0.0843 207.89),
-      oklch(0.6464 0.0823 209)
+      oklch(0.5 0.08 210),
+      oklch(0.7 0.08 210)
     );
     --md-sys-color-on-primary-container: light-dark(oklch(1 0 0), oklch(0 0 0));
     --md-sys-color-secondary: light-dark(
-      oklch(0.3305 0.0307 209.09),
-      oklch(0.8922 0.0284 210.53)
+      oklch(0.3 0.03 210),
+      oklch(0.9 0.03 210)
     );
-    --md-sys-color-on-secondary: light-dark(
-      oklch(1 0 0),
-      oklch(0.263 0.0317 209.09)
-    );
+    --md-sys-color-on-secondary: light-dark(oklch(1 0 0), oklch(0.3 0.03 210));
     --md-sys-color-secondary-container: light-dark(
-      oklch(0.5313 0.0293 211.76),
-      oklch(0.6522 0.0292 211.12)
+      oklch(0.5 0.03 210),
+      oklch(0.7 0.03 210)
     );
     --md-sys-color-on-secondary-container: light-dark(
       oklch(1 0 0),
       oklch(0 0 0)
     );
     --md-sys-color-tertiary: light-dark(
-      oklch(0.3337 0.0553 268.01),
-      oklch(0.8973 0.049581 271.5949)
+      oklch(0.3 0.03 270),
+      oklch(0.9 0.03 270)
     );
-    --md-sys-color-on-tertiary: light-dark(
-      oklch(1 0 0),
-      oklch(0.269 0.055 265.35)
-    );
+    --md-sys-color-on-tertiary: light-dark(oklch(1 0 0), oklch(0.3 0.03 270));
     --md-sys-color-tertiary-container: light-dark(
-      oklch(0.5349 0.0537 270.21),
-      oklch(0.6559 0.0527 269.71)
+      oklch(0.5 0.03 270),
+      oklch(0.7 0.03 270)
     );
     --md-sys-color-on-tertiary-container: light-dark(
       oklch(1 0 0),
       oklch(0 0 0)
     );
     --md-sys-color-error: light-dark(
-      oklch(0.3515 0.1434 27.37),
-      oklch(0.9007 0.0516 27.01)
+      oklch(0.35 0.15 27.5),
+      oklch(0.9 0.05 27.5)
     );
-    --md-sys-color-on-error: light-dark(
-      oklch(1 0 0),
-      oklch(0.2804 0.1144 27.4)
-    );
+    --md-sys-color-on-error: light-dark(oklch(1 0 0), oklch(0.2 0.11 27.5));
     --md-sys-color-error-container: light-dark(
-      oklch(0.5577 0.1995 27.83),
-      oklch(0.6795 0.2089 27.72)
+      oklch(0.55 0.2 27.5),
+      oklch(0.675 0.2 27.5)
     );
     --md-sys-color-on-error-container: light-dark(oklch(1 0 0), oklch(0 0 0));
     --md-sys-color-background: light-dark(
-      oklch(0.9816 0.0055 211.04),
-      oklch(0.1854 0.0094 208.77)
+      oklch(0.975 0.0055 210),
+      oklch(0.185 0.0095 210)
     );
     --md-sys-color-on-background: light-dark(
-      oklch(0.2251 0.0091 208.75),
-      oklch(0.9126 0.0061 223.46)
+      oklch(0.225 0.009 210),
+      oklch(0.9125 0.006 210)
     );
     --md-sys-color-surface: light-dark(
-      oklch(0.9816 0.0055 211.04),
-      oklch(0.1854 0.0094 208.77)
+      oklch(0.975 0.006 210),
+      oklch(0.185 0.009 210)
     );
     --md-sys-color-on-surface: light-dark(
-      oklch(0.1764 0.0095 208.78),
+      oklch(0.175 0.009 210),
       oklch(1 0 0)
     );
     --md-sys-color-surface-variant: light-dark(
-      oklch(0.9126 0.0101 212.52),
-      oklch(0.3943 0.0122 212.58)
+      oklch(0.9125 0.01 210),
+      oklch(0.4 0.01 210)
     );
     --md-sys-color-on-surface-variant: light-dark(
-      oklch(0.3327 0.0123 204.76),
-      oklch(0.8936 0.0112 211.04)
+      oklch(0.3 0.0125 210),
+      oklch(0.9 0.0125 210)
     );
     --md-sys-color-outline: light-dark(
-      oklch(0.4386 0.0119 212.57),
-      oklch(0.7624 0.0113 204.1)
+      oklch(0.4 0.01 210),
+      oklch(0.75 0.01 210)
     );
     --md-sys-color-outline-variant: light-dark(
-      oklch(0.5336 0.0123 204.04),
-      oklch(0.6524 0.012 211.04)
+      oklch(0.55 0.0125 210),
+      oklch(0.65 0.0125 210)
     );
     --md-sys-color-shadow: oklch(0 0 0);
     --md-sys-color-scrim: oklch(0 0 0);
     --md-sys-color-inverse-surface: light-dark(
-      oklch(0.3082 0.0091 219.77),
-      oklch(0.9126 0.0061 223.46)
+      oklch(0.3 0.01 220),
+      oklch(0.9 0.006 220)
     );
     --md-sys-color-inverse-on-surface: light-dark(
-      oklch(0.9569 0.0065 208.78),
-      oklch(0.2836 0.0087 208.74)
+      oklch(0.95 0.006 210),
+      oklch(0.28 0.009 210)
     );
     --md-sys-color-inverse-primary: light-dark(
-      oklch(0.8195 0.0812 208.7),
-      oklch(0.3944 0.067764 207.8042)
+      oklch(0.8 0.075 210),
+      oklch(0.4 0.075 210)
     );
     --md-sys-color-primary-fixed: light-dark(
-      oklch(0.5263 0.0843 207.89),
-      oklch(0.9048 0.0811 209.52)
+      oklch(0.5 0.085 210),
+      oklch(0.9 0.085 210)
     );
     --md-sys-color-on-primary-fixed: light-dark(
       oklch(1 0 0),
-      oklch(0.1748 0.03 206.8)
+      oklch(0.175 0.03 210)
     );
     --md-sys-color-primary-fixed-dim: light-dark(
-      oklch(0.4406 0.0756 207.39),
-      oklch(0.8195 0.0812 208.7)
+      oklch(0.4 0.075 210),
+      oklch(0.8 0.075 210)
     );
     --md-sys-color-on-primary-fixed-variant: light-dark(
       oklch(1 0 0),
-      oklch(0.3262 0.0563 209.43)
+      oklch(0.3 0.055 210)
     );
     --md-sys-color-secondary-fixed: light-dark(
-      oklch(0.5313 0.0293 211.76),
-      oklch(0.9104 0.0283 210.53)
+      oklch(0.5 0.03 210),
+      oklch(0.9 0.03 210)
     );
     --md-sys-color-on-secondary-fixed: light-dark(
       oklch(1 0 0),
-      oklch(0.1748 0.03 206.8)
+      oklch(0.175 0.03 210)
     );
     --md-sys-color-secondary-fixed-dim: light-dark(
-      oklch(0.4461 0.0297 208.84),
-      oklch(0.8243 0.0289 210.54)
+      oklch(0.4 0.03 210),
+      oklch(0.8 0.03 210)
     );
     --md-sys-color-on-secondary-fixed-variant: light-dark(
       oklch(1 0 0),
-      oklch(0.3305 0.0307 209.09)
+      oklch(0.3 0.03 210)
     );
     --md-sys-color-tertiary-fixed: light-dark(
-      oklch(0.5349 0.0537 270.21),
-      oklch(0.9157 0.0405 273.35)
+      oklch(0.5 0.05 270),
+      oklch(0.9 0.05 270)
     );
     --md-sys-color-on-tertiary-fixed: light-dark(
       oklch(1 0 0),
-      oklch(0.1811 0.0605 261.1)
+      oklch(0.2 0.06 270)
     );
     --md-sys-color-tertiary-fixed-dim: light-dark(
-      oklch(0.4494 0.0529 269.13),
-      oklch(0.8292 0.0523 270.72)
+      oklch(0.45 0.05 270),
+      oklch(0.83 0.05 270)
     );
     --md-sys-color-on-tertiary-fixed-variant: light-dark(
       oklch(1 0 0),
-      oklch(0.3337 0.0553 268.01)
+      oklch(0.3 0.055 270)
     );
     --md-sys-color-surface-dim: light-dark(
-      oklch(0.8263 0.0062 223.47),
-      oklch(0.1854 0.0094 208.77)
+      oklch(0.825 0.006 210),
+      oklch(0.185 0.009 210)
     );
     --md-sys-color-surface-bright: light-dark(
-      oklch(0.9816 0.0055 211.04),
-      oklch(0.3881 0.0094 207.08)
+      oklch(0.975 0.0055 210),
+      oklch(0.375 0.0095 210)
     );
     --md-sys-color-surface-container-lowest: light-dark(
       oklch(1 0 0),
-      oklch(0.129 0.0093 211.36)
+      oklch(0.125 0.0095 210)
     );
     --md-sys-color-surface-container-low: light-dark(
-      oklch(0.9659 0.0065 208.78),
-      oklch(0.2336 0.009 208.75)
+      oklch(0.966 0.0065 210),
+      oklch(0.2336 0.009 210)
     );
     --md-sys-color-surface-container: light-dark(
-      oklch(0.9297 0.0066 208.78),
-      oklch(0.2754 0.0087 208.74)
+      oklch(0.9297 0.0066 210),
+      oklch(0.2754 0.0087 210)
     );
     --md-sys-color-surface-container-high: light-dark(
-      oklch(0.8941 0.0067 208.78),
-      oklch(0.3188 0.0098 207.06)
+      oklch(0.8941 0.0067 210),
+      oklch(0.3188 0.0098 210)
     );
     --md-sys-color-surface-container-highest: light-dark(
-      oklch(0.8625 0.0067 208.78),
-      oklch(0.3624 0.0082 208.75)
+      oklch(0.8625 0.0067 210),
+      oklch(0.3624 0.0082 210)
     );
   }
 }
